// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useForm getFieldProps should return the correct object 1`] = `
Object {
  "error": undefined,
  "onBlur": [Function],
  "onChange": [Function],
  "submissionError": undefined,
  "submitting": false,
  "touched": false,
  "value": "name",
}
`;

exports[`useForm getFieldProps should return the correct object 2`] = `
Object {
  "error": undefined,
  "onBlur": [Function],
  "onChange": [Function],
  "submissionError": undefined,
  "submitting": false,
  "touched": false,
  "value": "lastName",
}
`;
